--- a/final_one_page_website.html
+++ b/final_one_page_website.html
@@ -329,49 +329,44 @@
 	</section>
 	<!-- End Video -->
 <!-- Sign-Up For Newsleter -->
-	<section id="Form">
+	<section id="Form" class="sign-Up">
 		<h1>The 'Heads Up!' NewsLetter</h1>
-		<div class="newsletter">
-			<h3>your source for everything stellar</h3><br>
-	<div class="blip">
-			<p>Be In The Know !!!<br><br>
-				Sign-Up for the 'Heads-Up!' NewsLetter <br><br>
-				Your source for Up-Coming Events, Feature Guests,<br> and Anything Else That Going On<br>
-				@ The Stellar Symposium !!! <br><br>
-				Don't Miss Out !!! Sign-Up NOW!!!
-			</p>
-		</div>
-		</div>
+			<div class="newsletter">
+				<h3>your source for everything stellar</h3><br>
+					<p>Be In The Know !!!<br><br>
+					Sign-Up for the 'Heads-Up!' NewsLetter <br><br>
+					Your source for Up-Coming Events, Feature Guests,<br> and Anything Else That Going On<br>
+					@ The Stellar Symposium !!! <br><br>
+					Don't Miss Out !!! Sign-Up NOW!!!</p>
+			</div>
+	
 	
 			<form action="" method="post">
-				<input class="signUp" type="text" placeholder="First Name" value=""><br>
-				<input class="signUp" type="text" placeholder="Last Name"  value=""><br>
-				<input class="signUp" type="email" placeholder="E-mail" value="">
-				<div>
-					<br><input type="submit" value="Submit">
-				</div>
-				<div class="form-spacer">
-					<br><label class="privacy">Protecting Your Privacy is Important to Us. <br>We Will Never Share Your Personal
-						Information.</label>
-				</div>
+					<input  type="text" placeholder="First Name" value=""><br>
+					<input  type="text" placeholder="Last Name"  value=""><br>
+					<input  type="email" placeholder="E-mail" value=""><br>
+					<input type="submit" value="Submit"><br>
+							<div class="form-spacer">
+								<label>Protecting Your Privacy is Important to Us. <br>We Will Never Share Your Personal
+								Information.</label>
+							</div>
 			</form>
 </section>
-
-
 	<!-- End Sign-Up -->
-
-
-	<!-- Footer -->
+<!-- Footer -->
 	<section id="Contact">
 			<h2>NEED TO CONTACT US ?</h2>
-			<p>The Stellar Symposium<br>
-				#101 Cool Place on Cool Street<br>
-				Coolest City Ever, OK 73044<br>
-				(405)282-0000<br>
-				Hours: 10:00am - 11:00pm T-Th<br>
-				10:00am - 2:00am F-Sat<br>
-				Closed: Sunday and Monday
-			</p>
+					
+						<p> The Stellar Symposium<br>
+						#101 Cool Place on Cool Street<br>
+						Coolest City Ever, OK 73044<br><br>
+						Phone: 405.282.STAR<br>
+						Email: stellar@thesymposium.com<br><br>
+						Hours: 10:00am - 11:00pm T-Th<br>
+						10:00am - 2:00am F-Sat<br>
+						Closed: Sunday and Monday</p>
+						<h4> Thank You... We Look forward To Meeting You !!!
+
 	</section> <!-- End Footer -->
 
 </body>
